--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -10,10 +10,10 @@
       autofocus: true,                                                                      |
       hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), |
       input_html: { autocomplete: "new-password" }                                          |
-    = f.input :password_confirmation,              |
-      label: "Confirm your new password",          |
-      required: true,                              |
-      input_html: { autocomplete: "new-password" } |
+    = f.input :password_confirmation,
+      label: "Confirm your new password",
+      required: true,
+      input_html: { autocomplete: "new-password" }
   .form-actions
-    = f.button :submit, "Change my password"
+    = f.button :submit, "Change my password", class: 'btn btn-white white-inverse-hover'
 = render "devise/shared/links"
