--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -9,7 +9,7 @@
         %li.nav-item.active
           = link_to "Home", "#", class: "nav-link"
         %li.nav-item
-          = link_to "Messages", "#", class: "nav-link"
+          = link_to "Contacts", user_contacts_path(current_user), class: "nav-link"
         %li.nav-item.dropdown
           = image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false
           .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "navbarDropdown"}
