--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,6 +1,8 @@
 .navbar.navbar-expand-sm.navbar-light.navbar-lewagon
   = link_to "#", class: "navbar-brand" do
-    = image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png"
+    - logo_url = 'https://previews.123rf.com/images/victor85/victor851711/victor85171100168/90388224-credit-card-circle-icon-black-round-minimalist-icon-isolated-on-white-background-credit-card-simple-.jpg'
+    -# = image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png"
+    = image_tag logo_url
   %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
     %span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
@@ -11,10 +13,9 @@
         %li.nav-item
           = link_to "Contacts", user_contacts_path(current_user), class: "nav-link"
         %li.nav-item.dropdown
-          = image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false
+          - avatar_image_link = "https://image.flaticon.com/icons/png/512/17/17004.png"
+          = image_tag avatar_image_link, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false
           .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "navbarDropdown"}
-            = link_to "Action", "#", class: "dropdown-item"
-            = link_to "Another action", "#", class: "dropdown-item"
             = link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item"
       - else
         %li.nav-item
